Enhance AdminPresenter and GameScreen for improved simulation management, add simulation deletion functionality, and update UI elements for better user experience