@@ -16,17 +16,17 @@ public class Simulation {
     private final List<Creature> creatures;
     private final double creatureWidth;
     private final int maxIterations;
+    private final int initialNumCreatures;
     public boolean isFinished;
     private boolean isSuccessful;
     private String finalMessage = "Simulation ended unexpectedly.";
 
-    // --- ESTADO PARA MODO ITERAÇÃO ---
+    // --- ESTADO UNIFICADO PARA AMBOS OS MODOS ---
     public enum SimulationState { READY_TO_PREPARE, READY_TO_UPDATE, READY_TO_RESOLVE, FINISHED }
     private SimulationState currentState = SimulationState.READY_TO_PREPARE;
     private int currentIteration = 0;
 
     // --- ESTADO PARA MODO TURNO ---
-    private int turnBasedRound = 0;
     private int turnBasedCreatureIndex = -1;
     private boolean guardianHasActedInRound = false;
 
@@ -47,6 +47,7 @@ public class Simulation {
         this.creatures = new ArrayList<>(numCreatures + 1);
         this.creatureWidth = creatureWidth;
         this.maxIterations = maxIterations;
+        this.initialNumCreatures = numCreatures;
 
         for (int i = 0; i < numCreatures; i++) {
             creatures.add(new Creature(1_000_000, horizonWidth / 2.0));
@@ -65,23 +66,110 @@ public class Simulation {
         this(numCreatures, 1.0, horizonWidth, iterations, randomProvider);
     }
 
+    // --- LÓGICA PARA O MODO DE TURNOS INDIVIDUAIS ---
+
+    public void runToEnd() {
+        System.out.println("\n--- EXECUTANDO SIMULAÇÃO ATÉ O FIM ---");
+        while (!isFinished()) {
+            Optional<Creature> activeCreatureOpt = processNextCreatureInTurn();
+            if (activeCreatureOpt.isEmpty()) {
+                break;
+            }
+            Creature activeCreature = activeCreatureOpt.get();
+            resolveTurnFor(activeCreature);
+        }
+        System.out.println("--- EXECUÇÃO RÁPIDA FINALIZADA ---");
+    }
+
+    public Optional<Creature> processNextCreatureInTurn() {
+        if (isFinished) return Optional.empty();
+
+        if (guardianHasActedInRound) {
+            currentIteration++;
+            turnBasedCreatureIndex = -1;
+            guardianHasActedInRound = false;
+        }
+
+        if (currentIteration >= maxIterations) {
+            this.finalMessage = "Simulation Over: Iteration limit reached.";
+            this.isFinished = true;
+            this.isSuccessful = false;
+            printResults();
+            return Optional.empty();
+        }
+
+        int searchIndex = turnBasedCreatureIndex + 1;
+        while (searchIndex < creatures.size()) {
+            Creature nextCreature = creatures.get(searchIndex);
+            if (!(nextCreature instanceof Guardian)) {
+                turnBasedCreatureIndex = searchIndex;
+                Creature activeCreature = creatures.get(turnBasedCreatureIndex);
+                activeCreature.resetTurnDelta();
+                calculateTargetPosition(activeCreature);
+                return Optional.of(activeCreature);
+            }
+            searchIndex++;
+        }
+
+        for (int i = 0; i < creatures.size(); i++) {
+            Creature creature = creatures.get(i);
+            if (creature instanceof Guardian) {
+                turnBasedCreatureIndex = i;
+                guardianHasActedInRound = true;
+                creature.resetTurnDelta();
+                calculateTargetPosition(creature);
+                return Optional.of(creature);
+            }
+        }
+
+        guardianHasActedInRound = true;
+        return processNextCreatureInTurn();
+    }
+
+    public void resolveTurnFor(Creature creature) {
+        if (isFinished || creature == null) return;
+        creature.commitPosition();
+        Optional<Cluster> newClusterOpt = handleCollisionsFor(creature);
+        if (creature instanceof Guardian) {
+            checkEndCondition();
+            printResults();
+            return;
+        }
+        if (newClusterOpt.isPresent()) {
+            findAndStealFromClosest(newClusterOpt.get());
+        } else {
+            if (creatures.contains(creature)) {
+                findAndStealFromClosest(creature);
+            }
+        }
+        checkEndCondition();
+        printResults();
+    }
+
+    private void findAndStealFromClosest(Creature stealer) {
+        creatures.stream()
+            .filter(c -> c.getId() != stealer.getId() && !(c instanceof Guardian))
+            .min(Comparator.comparingDouble(c -> Math.abs(c.getPosition() - stealer.getPosition())))
+            .ifPresent(closest -> {
+                System.out.printf("%s %d está roubando de %s %d.\n",
+                    stealer.getClass().getSimpleName(), stealer.getId(),
+                    closest.getClass().getSimpleName(), closest.getId());
+                stealer.stealFrom(closest);
+            });
+    }
+
     private Optional<Cluster> handleCollisionsFor(Creature movedCreature) {
         Optional<Creature> collisionOpt = creatures.stream()
             .filter(c -> c.getId() != movedCreature.getId() &&
                 Math.abs(c.getPosition() - movedCreature.getPosition()) < creatureWidth / 2.0)
             .findFirst();
-
         if (collisionOpt.isEmpty()) return Optional.empty();
-
         Creature otherCreature = collisionOpt.get();
         System.out.printf("--- COLISÃO DETECTADA: %s %d colidiu com %s %d ---\n",
             movedCreature.getClass().getSimpleName(), movedCreature.getId(),
             otherCreature.getClass().getSimpleName(), otherCreature.getId());
-
-        // Prioridade 1: Interação Guardião vs. Cluster
         Guardian guardian = null;
         Cluster cluster = null;
-
         if (movedCreature instanceof Guardian && otherCreature instanceof Cluster) {
             guardian = (Guardian) movedCreature;
             cluster = (Cluster) otherCreature;
@@ -89,15 +177,12 @@ public class Simulation {
             guardian = (Guardian) otherCreature;
             cluster = (Cluster) movedCreature;
         }
-
         if (guardian != null) {
             System.out.printf("Guardião %d absorveu Cluster %d.\n", guardian.getId(), cluster.getId());
             guardian.absorbCluster(cluster);
             creatures.remove(cluster);
             return Optional.empty();
         }
-
-        // Prioridade 2: Cluster absorve outra criatura (que não seja guardião)
         if (otherCreature instanceof Cluster) {
             System.out.printf("Cluster %d absorveu %s %d.\n", otherCreature.getId(), movedCreature.getClass().getSimpleName(), movedCreature.getId());
             ((Cluster) otherCreature).addMember(movedCreature);
@@ -110,50 +195,39 @@ public class Simulation {
             creatures.remove(otherCreature);
             return Optional.empty();
         }
-
-        // Prioridade 3: Duas Creatures normais formam um novo Cluster
         if (!(movedCreature instanceof Guardian) && !(otherCreature instanceof Guardian)) {
             Cluster newCluster = new Cluster(movedCreature, otherCreature);
             System.out.printf("Criado novo Cluster %d a partir de %d e %d.\n", newCluster.getId(), movedCreature.getId(), otherCreature.getId());
-
             int activeIndex = creatures.indexOf(movedCreature);
             if (activeIndex != -1) {
                 creatures.set(activeIndex, newCluster);
             } else {
-                creatures.add(newCluster); // Fallback
+                creatures.add(newCluster);
             }
-
             creatures.remove(otherCreature);
             turnBasedCreatureIndex = creatures.indexOf(newCluster);
             return Optional.of(newCluster);
         }
-
         return Optional.empty();
     }
 
     public Optional<Creature> peekNextCreatureInTurn() {
         if (isFinished) return Optional.empty();
-
-        // Se o guardião já agiu, o próximo será a primeira criatura do novo round
         if (guardianHasActedInRound) {
             return creatures.stream().filter(c -> !(c instanceof Guardian)).findFirst();
         }
-
-        // Procura a próxima criatura saltitante a partir do índice atual
         int searchIndex = turnBasedCreatureIndex + 1;
         while (searchIndex < creatures.size()) {
             Creature nextCreature = creatures.get(searchIndex);
             if (!(nextCreature instanceof Guardian)) {
-                return Optional.of(nextCreature); // Encontrou, retorna
+                return Optional.of(nextCreature);
             }
             searchIndex++;
         }
-
-        // Se não encontrou, significa que todas já agiram, então o próximo é o guardião
         return creatures.stream().filter(c -> c instanceof Guardian).findFirst();
     }
 
-    // modo de iteração (todos de uma vez)
+    // --- LÓGICA PARA O MODO DE ITERAÇÃO (TODOS DE UMA VEZ) ---
 
     public void prepare() {
         if (currentState != SimulationState.READY_TO_PREPARE) return;
@@ -183,7 +257,7 @@ public class Simulation {
         if (currentState != SimulationState.READY_TO_RESOLVE) return;
         System.out.println("----- Resolvendo Colisões e Ações -----");
         handleCollisionsAndActions();
-        if (isSimulationSuccessful()) {
+        if (isVictoryConditionMet()) {
             isSuccessful = true;
             this.currentState = SimulationState.FINISHED;
         } else if (currentIteration >= maxIterations) {
@@ -224,7 +298,7 @@ public class Simulation {
         this.creatures.addAll(newClusters);
         for (Creature newCreature : newClusters) {
             if (newCreature instanceof Cluster) {
-                findAndStealFromClosest((Cluster) newCreature);
+                findAndStealFromClosest(newCreature);
             }
         }
     }
@@ -250,45 +324,19 @@ public class Simulation {
         }
     }
 
-    // métodos auxiliares
-
-    private boolean isSimulationSuccessful() {
-        if (creatures.size() == 1 && creatures.get(0) instanceof Guardian) {
-            return true;
-        }
-        if (creatures.size() == 2) {
-            Creature c1 = creatures.get(0);
-            Creature c2 = creatures.get(1);
-            if ((c1 instanceof Guardian && c1.getCoins() > c2.getCoins()) ||
-                (c2 instanceof Guardian && c2.getCoins() > c1.getCoins())) {
-                System.out.println("Simulação bem-sucedida: guardião com mais moedas que a criatura restante.");
-                return true;
-            }
-        }
-        return false;
-    }
+    // --- MÉTODOS AUXILIARES E GETTERS/SETTERS ---
 
     private void checkEndCondition() {
         if (isFinished) return;
-
-        // só resta o guardião
-        if (creatures.size() == 1 && creatures.get(0) instanceof Guardian) {
+        if (creatures.size() == 1 && creatures.getFirst() instanceof Guardian) {
             this.isFinished = true;
             this.isSuccessful = true;
             this.finalMessage = "SUCCESS! Only the guardian remains.";
-            System.out.println(this.finalMessage);
             return;
         }
-
-        // restam duas criaturas
         if (creatures.size() == 2) {
-            Creature c1 = creatures.get(0);
-            Creature c2 = creatures.get(1);
-
-            Guardian guardian = (c1 instanceof Guardian) ? (Guardian) c1 : (c2 instanceof Guardian) ? (Guardian) c2 : null;
-            Creature other = (c1 == guardian) ? c2 : c1;
-
-            // a condição de fim só é válida se o outro for uma Creature simples, e não um Cluster
+            Guardian guardian = (Guardian) creatures.stream().filter(c -> c instanceof Guardian).findFirst().orElse(null);
+            Creature other = creatures.stream().filter(c -> !(c instanceof Guardian)).findFirst().orElse(null);
             if (guardian != null && other != null && other.getClass() == Creature.class) {
                 this.isFinished = true;
                 if (guardian.getCoins() > other.getCoins()) {
@@ -298,108 +346,23 @@ public class Simulation {
                     this.isSuccessful = false;
                     this.finalMessage = "DEFEAT! The final creature has more coins than the guardian.";
                 }
-                System.out.println(this.finalMessage);
             }
         }
     }
 
-    public void runToEnd() {
-        System.out.println("\n--- EXECUTANDO SIMULAÇÃO ATÉ O FIM ---");
-        while (!isFinished()) {
-            Optional<Creature> activeCreatureOpt = processNextCreatureInTurn();
-            if (activeCreatureOpt.isEmpty()) {
-                break;
-            }
-            resolveTurnFor(activeCreatureOpt.get());
+    private boolean isVictoryConditionMet() {
+        if (creatures.size() == 1 && creatures.get(0) instanceof Guardian) return true;
+        if (creatures.size() == 2) {
+            Creature c1 = creatures.get(0);
+            Creature c2 = creatures.get(1);
+            return (c1 instanceof Guardian && c1.getCoins() > c2.getCoins()) ||
+                (c2 instanceof Guardian && c2.getCoins() > c1.getCoins());
         }
-        System.out.println("--- EXECUÇÃO RÁPIDA FINALIZADA ---");
-    }
-
-    public Optional<Creature> processNextCreatureInTurn() {
-        if (isFinished) return Optional.empty();
-
-        if (guardianHasActedInRound) {
-            turnBasedRound++;
-            turnBasedCreatureIndex = -1;
-            guardianHasActedInRound = false;
-        }
-
-        if (turnBasedRound >= maxIterations) {
-            this.finalMessage = "Simulation Over: Iteration limit reached.";
-            this.isFinished = true;
-            this.isSuccessful = false;
-            printResults();
-            return Optional.empty();
-        }
-
-        int searchIndex = turnBasedCreatureIndex + 1;
-        while (searchIndex < creatures.size()) {
-            Creature nextCreature = creatures.get(searchIndex);
-            if (!(nextCreature instanceof Guardian)) {
-                turnBasedCreatureIndex = searchIndex;
-                Creature activeCreature = creatures.get(turnBasedCreatureIndex);
-                activeCreature.resetTurnDelta();
-                calculateTargetPosition(activeCreature);
-                return Optional.of(activeCreature);
-            }
-            searchIndex++;
-        }
-
-        for (int i = 0; i < creatures.size(); i++) {
-            Creature creature = creatures.get(i);
-            if (creature instanceof Guardian) {
-                turnBasedCreatureIndex = i;
-                guardianHasActedInRound = true;
-                creature.resetTurnDelta();
-                calculateTargetPosition(creature);
-                return Optional.of(creature);
-            }
-        }
-
-        guardianHasActedInRound = true;
-        return processNextCreatureInTurn();
-    }
-
-    public Optional<Cluster> resolveTurnFor(Creature creature) {
-        if (isFinished || creature == null) return Optional.empty();
-        creature.commitPosition();
-
-        Optional<Cluster> newClusterOpt = handleCollisionsFor(creature);
-
-        if (creature instanceof Guardian) {
-            checkEndCondition();
-            printResults();
-            return Optional.empty();
-        }
-
-        if (newClusterOpt.isPresent()) {
-            findAndStealFromClosest(newClusterOpt.get());
-        } else {
-            if (creatures.contains(creature)) {
-                findAndStealFromClosest(creature);
-            }
-        }
-
-        checkEndCondition();
-        printResults();
-
-        return newClusterOpt;
-    }
-
-    private void findAndStealFromClosest(Creature stealer) {
-        creatures.stream()
-            .filter(c -> c.getId() != stealer.getId() && !(c instanceof Guardian))
-            .min(Comparator.comparingDouble(c -> Math.abs(c.getPosition() - stealer.getPosition())))
-            .ifPresent(closest -> {
-                System.out.printf("%s %d está roubando de %s %d.\n",
-                    stealer.getClass().getSimpleName(), stealer.getId(),
-                    closest.getClass().getSimpleName(), closest.getId());
-                stealer.stealFrom(closest);
-            });
+        return false;
     }
 
     public void printResults() {
-        System.out.printf("\n--- Iteração: %d ---\n", turnBasedRound);
+        System.out.printf("\n--- Iteração: %d ---\n", currentIteration);
         System.out.println("Estado atual:");
         long totalCoinsInPlay = 0;
         for (Creature creature : creatures) {
@@ -418,7 +381,6 @@ public class Simulation {
         creature.setTargetPosition(newPosition);
     }
 
-    // --- Getters e Setters ---
     public boolean isFinished() { return isFinished; }
     public List<Creature> getCreatures() { return creatures; }
     public SimulationState getCurrentState() { return currentState; }
@@ -432,7 +394,6 @@ public class Simulation {
     public void setId(Long id) { this.id = id; }
     public LocalDateTime getCreatedAt() { return createdAt; }
     public void setCreatedAt(LocalDateTime createdAt) { this.createdAt = createdAt; }
-    public String getFinalMessage() {
-        return finalMessage;
-    }
+    public String getFinalMessage() { return finalMessage; }
+    public int getInitialNumCreatures() { return initialNumCreatures; }
 }
